tests/errors/end_function_name_not_match.f90
real function square(x)
    ! Declare the type of the argument
    real, intent(in) :: x
    ! Declare the return variable
    square = x * x
end function square_int
